tests/ui/asm/x86_64/interpolated-idents.stderr
error: the `nomem` and `readonly` options are mutually exclusive
  --> $DIR/interpolated-idents.rs:13:13
   |
LL | / macro_rules! m {
LL | |     ($in:ident $out:ident $lateout:ident $inout:ident $inlateout:ident $const:ident $sym:ident
LL | |      $pure:ident $nomem:ident $readonly:ident $preserves_flags:ident
LL | |      $noreturn:ident $nostack:ident $att_syntax:ident $options:ident) => {
...  |
LL | |             $options($pure, $nomem, $readonly, $preserves_flags, $noreturn, $nostack, $att_syntax));
   | |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `m!`
...
LL | /     m!(in out lateout inout inlateout const sym
LL | |        pure nomem readonly preserves_flags
LL | |        noreturn nostack att_syntax options);
   | |___________________________________________- in this macro invocation

error: the `pure` and `noreturn` options are mutually exclusive
  --> $DIR/interpolated-idents.rs:13:13
   |
LL | / macro_rules! m {
LL | |     ($in:ident $out:ident $lateout:ident $inout:ident $inlateout:ident $const:ident $sym:ident
LL | |      $pure:ident $nomem:ident $readonly:ident $preserves_flags:ident
LL | |      $noreturn:ident $nostack:ident $att_syntax:ident $options:ident) => {
...  |
LL | |             $options($pure, $nomem, $readonly, $preserves_flags, $noreturn, $nostack, $att_syntax));
   | |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `m!`
...
LL | /     m!(in out lateout inout inlateout const sym
LL | |        pure nomem readonly preserves_flags
LL | |        noreturn nostack att_syntax options);
   | |___________________________________________- in this macro invocation

error: asm outputs are not allowed with the `noreturn` option
  --> $DIR/interpolated-idents.rs:10:32
   |
LL | / macro_rules! m {
LL | |     ($in:ident $out:ident $lateout:ident $inout:ident $inlateout:ident $const:ident $sym:ident
LL | |      $pure:ident $nomem:ident $readonly:ident $preserves_flags:ident
LL | |      $noreturn:ident $nostack:ident $att_syntax:ident $options:ident) => {
LL | |         unsafe {
LL | |             asm!("", $in(x) x, $out(x) x, $lateout(x) x, $inout(x) x, $inlateout(x) x,
   | |                                ^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^^
...  |
LL | |     };
LL | | }
   | | -
   | |_|
   | |_in this expansion of `m!`
   | |_in this expansion of `m!`
   | |_in this expansion of `m!`
   |   in this expansion of `m!`
...
LL | /     m!(in out lateout inout inlateout const sym
LL | |        pure nomem readonly preserves_flags
LL | |        noreturn nostack att_syntax options);
   | |                                           -
   | |___________________________________________|
   | |___________________________________________in this macro invocation
   | |___________________________________________in this macro invocation
   | |___________________________________________in this macro invocation
   |                                             in this macro invocation

error: aborting due to 3 previous errors

